Bug 524424 - Royale Theme icons are misaligned. r+ui-r=andreasn

--- a/mail/themes/qute/mail/mailWindow1-aero.css
+++ b/mail/themes/qute/mail/mailWindow1-aero.css
@@ -209,6 +209,10 @@ treechildren::-moz-tree-image(unreadButtonColHeader) {
   -moz-margin-start: -3px;
 }
 
+treechildren::-moz-tree-image(attachmentCol, attach) {
+  -moz-margin-start: 0px;
+}
+
 treechildren::-moz-tree-image(junkStatusCol) {
   -moz-margin-start: -3px;
 }
